objects/Answer__c.object
<CustomObject>
    <description>Houses the Answer options related to the Questions records.</description>
    <fields>
        <fullName>Answer_Minimum__c</fullName>
        <formula>If(
CONTAINS(Answer_Option__c , &quot;-&quot;),Value(SUBSTITUTE( Left( Answer_Option__c ,FIND(&quot;-&quot;, Answer_Option__c )), &quot;-&quot;, &quot;&quot;)),

If(
Contains(Answer_Option__c , &quot;+&quot;),Value(SUBSTITUTE( Left( Answer_Option__c ,FIND(&quot;+&quot;, Answer_Option__c )), &quot;+&quot;, &quot;&quot;)),0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer (Minimum)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_Option__c</fullName>
        <description>Answer Option for related Question</description>
        <label>Answer Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Order__c</fullName>
        <description>This indicates the order that answers are to appear in the survey.  Duplicate values will result in unpredictable results for answers sharing the same order value.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>Question text from related Question record</description>
        <formula>Question__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question related to the answers</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Answer_ID__c</fullName>
        <description>18 Digit Salesforce ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Answer ID</label>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <recordTypes>
        <fullName>Digigraph_Answer</fullName>
        <active>true</active>
        <description>Used for Answers for Digigraph Surveys</description>
        <label>Digigraph Answer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_Not_Allow_Spaces</fullName>
        <active>true</active>
        <description>This validation rule does not allow any combination of hyphens and spaces.</description>
        <errorConditionFormula>Or( 
CONTAINS( Answer_Option__c , &quot; - &quot;), 
CONTAINS( Answer_Option__c , &quot;- &quot;), 
CONTAINS( Answer_Option__c , &quot; -&quot;), 
CONTAINS( Answer_Option__c , &quot; + &quot;), 
CONTAINS( Answer_Option__c , &quot;+ &quot;), 
CONTAINS( Answer_Option__c , &quot; +&quot;), 
CONTAINS( Answer_Option__c , &quot; &lt; &quot;), 
CONTAINS( Answer_Option__c , &quot;&lt; &quot;), 
CONTAINS( Answer_Option__c , &quot; &lt;&quot;), 
CONTAINS( Answer_Option__c , &quot; &lt;= &quot;), 
CONTAINS( Answer_Option__c , &quot;&lt;= &quot;), 
CONTAINS( Answer_Option__c , &quot; &lt;=&quot;), 
CONTAINS( Answer_Option__c , &quot; &gt; &quot;), 
CONTAINS( Answer_Option__c , &quot;&gt; &quot;), 
CONTAINS( Answer_Option__c , &quot; &gt;&quot;), 
CONTAINS( Answer_Option__c , &quot; &gt;= &quot;), 
CONTAINS( Answer_Option__c , &quot;&gt;= &quot;), 
CONTAINS( Answer_Option__c , &quot; &gt;=&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Answer_Option__c</errorDisplayField>
        <errorMessage>Formatting is incorrect. Please remove spaces.</errorMessage>
    </validationRules>
</CustomObject>